# Shariks

./: .gitignore  Cargo.toml  NOTICE  README.md
migrations/: 20250504081830_create_schema.sql  20250504081830_create_wallets.sql  20250504083209_create_referrer_counter.sql  20250504104748_create_exempt_fees_addresses.sql  20250514170217_create_blocks.sql  20250514170327_create_transactions.sql  20250515171003_create_wallet_balances.sql  20250517182306_create_system_status.sql.sql  20250519172540_create_staking_scores.sql  20250520173105_create_wallets.sql  20250520173110_create_givetokens.sql  20250523181916_create_tmp_ledger_sync.sql  20250628164338_create_fake_wallets.sql
shariks_api/: cargo.toml
shariks_api/src/: handler.rs  main.rs
shariks_core/: Cargo.toml
shariks_core/src/: blockchain.rs  encryption.rs  fake_insert.rs  genesis.rs  ledger.rs  lib.rs  log.rs  main.rs  staking.rs  utils.rs  vault.rs  wallet.rs
shariks_wallet_core_wasm/: Cargo.toml
shariks_wallet_core_wasm/src/: encryption.rs  handler.rs  lib.rs
src/: blockchain.rs  encryption.rs  genesis.rs  ledger.rs  lib.rs  log.rs  main.rs  staking.rs  utils.rs  vault.rs  wallet.rs
src/api_module/: handler.rs  mod.rs
