[package]
name = "Shariks"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bip39 = { version = "2.1.0", features = ["rand"] }
ed25519-dalek = { version = "2.1.1", features = ["hazmat", "batch"] }
hex = "0.4.3"
once_cell = "1.21.3"
rand = "0.8.5"
rand_core = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
uuid = { version = "1", features = ["v4", "serde"] }
