[package]
name = "Shariks"
version = "0.1.0"
edition = "2024"
authors = ["NeoDev @ boillot.frederic.62@gmail.com"]
license = "Apache-2.0"
license-file = "LICENSE"

[dependencies]
actix-web = "4.10.2"
base64 = "0.22.1"
bip39 = { version = "2.1.0", features = ["rand"] }
chacha20poly1305 = "0.10.1"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.1.1", features = ["hazmat", "batch"] }
hex = "0.4.3"
once_cell = "1.21.3"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
