[package]
name = "shariks_wallet_core_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chacha20poly1305 = "0.10.1"
argon2 = { version = "0.5", features = ["std"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
hex = "0.4.3"
base64 = "0.22.1"
bip39 = { version = "2.1.0", features = ["rand"] }
ed25519-dalek = { version = "2.1.1", features = ["hazmat", "batch"] }
rand = "0.8.5"
rand_core = "0.6.4"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
getrandom = { version = "0.2", features = ["js"] }
